# elotracker

./: .gitignore  CMakeLists.txt  README.md  main.cc
chess_ocr/: scoresheet_pipeline.py  server.py
chess_ocr/data/: chess_dict_full.txt
controllers/: MainCtrl.cc  MainCtrl.h  Player.cc  Player.h  Players.cc  Players.h  ScoresheetCtrl.cc  ScoresheetCtrl.h  string_utils.h
screenshot/: README.md
tools/: CMakeLists.txt
tools/copy/: copy_latest_fide_supplement.cpp  copy_latest_uscf_supplement.cpp  copy_uscf_top_players_rocks.cpp  copyfidesupplement.cpp  copysupplement.cpp  copytorocks.cpp
tools/crawlers/fide_crawl/fide_crawl/spiders/: fide_spider.py
tools/crawlers/fide_topplayers_crawl/fide_topplayers_crawl/spiders/: fide_topplayers_spider.py
tools/crawlers/uscf_crawl/uscf_crawl/spiders/: uscf_spider.py
tools/crawlers/uscf_topplayers_crawl/uscf_topplayers_crawl/spiders/: uscf_topplayers_spider.py
views/: BadRequestLayout.csp  GlobalLayout.csp  Main.csp  PlayerView.csp  PlayersLayout.csp  ScoresheetView.csp
